--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/ferdyUbersnap/anchor-point",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ferdyUbersnap/anchor-point.git"
+    "url": "git+https://github.com/ferdyUbersnap/anchor-point.git"
   },
   "publishConfig": {
     "access": "public",
