implement colab editing and undo redo

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@src/*": ["./src/*"],
+      "@service/*": ["./src/service/*"],
       "@pages/*": ["./src/pages/*"],
       "@dist/*": ["../dist/*"]
     },
