--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "axios": "^1.6.1",
+    "centrifuge": "^5.0.1",
     "iconsax-react": "^0.0.8",
     "jotai": "^2.5.1",
     "react": "^18.2.0",
